# tftp-serve

./: README.md  stack.yaml  tftp-serve.cabal
src/: Main.hs
tftp-0.2/: tftp.cabal
tftp-0.2/src/Network/TFTP/: UDPIO.hs
