name:                tftp-serve
version:             0.1.0.0
synopsis:            A simple TFTP server
description:         Serves a set of files from command line
homepage:            https://github.com/rudchenkos/tftp-boot#readme
license:             BSD3
license-file:        LICENSE
author:              Sergii Rudchenko
maintainer:          rudchenkos@gmail.com
copyright:           2018 Sergii Rudchenko
category:            Util
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tftp-serve
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tftp, containers, bytestring, optparse-applicative
